--- a/EDA-Gun_Violence_in_US.Rmd
+++ b/EDA-Gun_Violence_in_US.Rmd
@@ -301,4 +301,19 @@ p.allcities <- ggplot(data = meanCBClaws, aes(x = `Number of Laws`, y = `Casualt
 
 ggplotly(p.allcities, tooltip = c("text"))
 ```
-There are 699 cities displayed here. It is clear that in a given state, there is a wide distribution in the casualty rates. You can hover over each point to see the data it represents.
+There are 699 cities displayed here (there are actually a lot more cities throughout the US where gun violence occurred, but remember, the population data was only available for cities over 50,000 people). It is clear that in a given state, there is a wide distribution in the casualty rates. You can hover over each point to see the data it represents.
+
+Let's look at a box and whisker plot in order to see the distribution in city casualty rates in each state:
+```{r stateLaw-bwplot, fig.width = 10, fig.height = 8}
+ggplot(data = meanCBClaws, aes(x = reorder(state.long, -`Casualty Rate`), y = `Casualty Rate`, fill = `Number of Laws`)) +
+      geom_boxplot() + 
+      labs(x = NULL) + 
+      labs (y = "Casualty Rate (Per 100,000 People)") +
+      scale_fill_gradient2(midpoint = max(meanCBClaws$`Number of Laws`)/2, name = "Avg. Number of State Gun Laws", guide = guide_colorbar(direction = "horizontal", title.position = "top", barwidth = 10, title.hjust = .5)) + 
+      theme(legend.background = element_rect(fill="gray90", size=.3, color = "black", linetype = 1)) +
+      theme(legend.justification=c(1,1), legend.position=c(1,1)) +
+      theme(axis.text.x  = element_text(angle=90, vjust=0.5, size = 14)) + 
+      theme(axis.title.y = element_text(size = 16)) + 
+      theme(plot.title = element_text(size = 16))
+```
+
